--- a/开始使用/分析 Analytics 集成指南/Android 文档/上报页面访问.md
+++ b/开始使用/分析 Analytics 集成指南/Android 文档/上报页面访问.md
@@ -47,4 +47,4 @@ protected void onPause() {
 }
 ```
 
-此外，如果您在手动上报时也想关闭 SDK 自带的自动上报，可以参考 [定制 Analytics 服务]()。
+此外，如果您在手动上报时也想关闭 SDK 自带的自动上报，可以参考 [定制 Analytics 服务](https://github.com/tencentyun/tac-documents/blob/master/%E4%BD%BF%E7%94%A8%E6%96%87%E6%A1%A3/%E5%88%86%E6%9E%90%20Analytics%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/Android%20%E6%96%87%E6%A1%A3/%E5%AE%9A%E5%88%B6%E6%9C%8D%E5%8A%A1.md)。
