--- a/开始使用/分析 Analytics 集成指南/服务接入总览.md
+++ b/开始使用/分析 Analytics 集成指南/服务接入总览.md
@@ -61,7 +61,7 @@
 
 ### 4. 集成配置和 SDK
 
-根据您应用所在的平台，将下载的配置文件和 SDK 集成到您的本地工程中。详细集成步骤请参考 [Android 快速入门](https://cloud.tencent.com/document/product/666/14313) 和 [iOS 快速入门](https://cloud.tencent.com/document/product/666/14315)。您也可以使用我们的 DEMO 工程，替换为您的配置文件。
+根据您应用所在的平台，将下载的配置文件和 SDK 集成到您的本地工程中。详细集成步骤请参考 [Android 快速入门](https://github.com/tencentyun/tac-documents/blob/master/%E4%BD%BF%E7%94%A8%E6%96%87%E6%A1%A3/%E5%88%86%E6%9E%90%20Analytics%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/Android%20%E6%96%87%E6%A1%A3/Android%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8.md) 和 [iOS 快速入门](https://github.com/tencentyun/tac-documents/blob/master/%E4%BD%BF%E7%94%A8%E6%96%87%E6%A1%A3/%E5%88%86%E6%9E%90%20Analytics%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/iOS%20%E6%96%87%E6%A1%A3/iOS%20%E4%BD%BF%E7%94%A8%E5%85%A5%E9%97%A8.md)。您也可以使用我们的 DEMO 工程，替换为您的配置文件。
 
 ### 5. App 添加上报代码
 
