--- a/开始使用/分析 Analytics 集成指南/控制台文档/数据概览.md
+++ b/开始使用/分析 Analytics 集成指南/控制台文档/数据概览.md
@@ -6,14 +6,14 @@
 
 ### 活跃用户数
 
-活跃用户指的是启动过应用并浏览了页面的设备，多次启动仅计算一次。具体的说明和场景分析请参考 [指标-活跃用户](https://cloud.tencent.com/document/product/666/14846) 文档。
+活跃用户指的是启动过应用并浏览了页面的设备，多次启动仅计算一次。具体的说明和场景分析请参考 [指标-活跃用户](https://github.com/tencentyun/tac-documents/blob/master/%E4%BD%BF%E7%94%A8%E6%96%87%E6%A1%A3/%E5%88%86%E6%9E%90%20Analytics%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/%E6%8E%A7%E5%88%B6%E5%8F%B0%E6%96%87%E6%A1%A3/%E6%8C%87%E6%A0%87-%E6%B4%BB%E8%B7%83%E7%94%A8%E6%88%B7.md) 文档。
 
 
 ### 活跃账号数
 
 **账号是指应用设置的用户标识，可能是用户体系中的账号，也可能是三方登录系统中的用户标识。**活跃账号指的是启动过应用并浏览了页面的账号，多次启动仅计算一次，同一账号多个设备首次启动只计算一次。通过账号统计，可以实现新增账号、活跃账号等维度的数据统计，相对于设备维度统计，可以帮助开发者更好地统计用户注册以及登录情况。
 
-具体关于如何设置账号，请参考 [Analytics Android 使用入门](https://cloud.tencent.com/document/product/666/14313) 和 [Analytics iOS 使用入门](https://cloud.tencent.com/document/product/666/14315)。
+具体关于如何设置账号，请参考 [Analytics Android 使用入门](https://github.com/tencentyun/tac-documents/blob/master/%E4%BD%BF%E7%94%A8%E6%96%87%E6%A1%A3/%E5%88%86%E6%9E%90%20Analytics%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/Android%20%E6%96%87%E6%A1%A3/Android%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8.md) 和 [Analytics iOS 使用入门](https://github.com/tencentyun/tac-documents/blob/master/%E4%BD%BF%E7%94%A8%E6%96%87%E6%A1%A3/%E5%88%86%E6%9E%90%20Analytics%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/iOS%20%E6%96%87%E6%A1%A3/iOS%20%E4%BD%BF%E7%94%A8%E5%85%A5%E9%97%A8.md)。
 
 ### 启动次数
 
