--- a/开始使用/存储 Storage 集成指南/安全和访问控制/数据安全性最佳实践.md
+++ b/开始使用/存储 Storage 集成指南/安全和访问控制/数据安全性最佳实践.md
@@ -4,7 +4,7 @@ Storage 构建于腾讯云的安全体系中，为您的数据访问提供健壮
 
 ## 前提
 
-如果您还不了解我们整个鉴权体系的流程，以及如何搭建一个后台授权服务器，请查看 [用户访问控制](https://cloud.tencent.com/document/product/666/17922)。
+如果您还不了解我们整个鉴权体系的流程，以及如何搭建一个后台授权服务器，请查看 [用户访问控制](https://github.com/tencentyun/tac-documents/blob/master/%E4%BD%BF%E7%94%A8%E6%96%87%E6%A1%A3/%E5%AD%98%E5%82%A8%20Storage%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/%E5%AE%89%E5%85%A8%E5%92%8C%E8%AE%BF%E9%97%AE%E6%8E%A7%E5%88%B6/%E7%94%A8%E6%88%B7%E8%AE%BF%E9%97%AE%E6%8E%A7%E5%88%B6.md)。
 
 ## 公开访问
 
