--- a/开始使用/通知推送 Messaging 集成指南/服务端API接入/Rest API 使用指南/删除账号映射/删除全部账号映射.md
+++ b/开始使用/通知推送 Messaging 集成指南/服务端API接入/Rest API 使用指南/删除账号映射/删除全部账号映射.md
@@ -3,7 +3,7 @@ URL 路径：`http://接口域名/v2/application/del_app_account_all_tokens?para
 
 ### 请求参数.qcloud
 
-除了 [通用参数](https://cloud.tencent.com/document/product/666/15603) 外，还包括如下参数：
+除了 [通用参数](https://github.com/tencentyun/tac-documents/blob/master/%E4%BD%BF%E7%94%A8%E6%96%87%E6%A1%A3/%E9%80%9A%E7%9F%A5%E6%8E%A8%E9%80%81%20Messaging%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/%E6%9C%8D%E5%8A%A1%E7%AB%AFAPI%E6%8E%A5%E5%85%A5/Rest%20API%20%E4%BD%BF%E7%94%A8%E6%8C%87%E5%8D%97/%E9%80%9A%E7%94%A8%E5%8F%82%E6%95%B0.md) 外，还包括如下参数：
 
 |参数名|	类型	|必需|	默认值|	描述|
 |-|-|-|-|-|
