--- a/开始使用/通知推送 Messaging 集成指南/服务端API接入/Rest API 使用指南/查询相关接口/查询应用设备数.md
+++ b/开始使用/通知推送 Messaging 集成指南/服务端API接入/Rest API 使用指南/查询相关接口/查询应用设备数.md
@@ -2,7 +2,7 @@
 URL 路径：`http://接口域名/v2/application/get_app_device_num?params`
 
 ### 请求参数
-本接口仅包括 [通用参数](https://cloud.tencent.com/document/product/666/15603) 。
+本接口仅包括 [通用参数](https://github.com/tencentyun/tac-documents/blob/master/%E4%BD%BF%E7%94%A8%E6%96%87%E6%A1%A3/%E9%80%9A%E7%9F%A5%E6%8E%A8%E9%80%81%20Messaging%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/%E6%9C%8D%E5%8A%A1%E7%AB%AFAPI%E6%8E%A5%E5%85%A5/Rest%20API%20%E4%BD%BF%E7%94%A8%E6%8C%87%E5%8D%97/%E9%80%9A%E7%94%A8%E5%8F%82%E6%95%B0.md) 。
 
 ### 响应结果
 在通用返回结果参数中，result 字段的 json 形式为（若请求应用列表中某个应用信息非法，则不会在 result 中返回结果。）：
