--- a/开始使用/通知推送 Messaging 集成指南/Android 文档/通过控制台推送消息.md
+++ b/开始使用/通知推送 Messaging 集成指南/Android 文档/通过控制台推送消息.md
@@ -2,7 +2,7 @@
 
 ### 在控制台上推送消息
 
-打开 [MobileLine 控制台](https://console.cloud.tencent.com/tac)，选择【创建推送】下的【通知栏消息】，并填写好 **通知标题** 和 **通知内容**，然后选择单选框中的【单个设备】，并将注册成功后回调时打印的设备唯一标识 token 信息拷贝到编辑框中（获取 token 信息请参见 [这里](https://cloud.tencent.com/document/product/666/16635)），您也可以在推送时添加自定义参数，然后点击【确认推送】。
+打开 [MobileLine 控制台](https://console.cloud.tencent.com/tac)，选择【创建推送】下的【通知栏消息】，并填写好 **通知标题** 和 **通知内容**，然后选择单选框中的【单个设备】，并将注册成功后回调时打印的设备唯一标识 token 信息拷贝到编辑框中（获取 token 信息请参见 [这里](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E9%80%9A%E7%9F%A5%E6%8E%A8%E9%80%81%20Messaging%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/Android%20%E6%96%87%E6%A1%A3/%E8%8E%B7%E5%8F%96%E8%AE%BE%E5%A4%87%E6%8E%A8%E9%80%81%20token.md)），您也可以在推送时添加自定义参数，然后点击【确认推送】。
 
 ![](https://tacimg-1253960454.cos.ap-guangzhou.myqcloud.com/guides/Messaging/console_push_notification.png)
 
@@ -31,7 +31,7 @@ I/messaging: MyReceiver::onNotificationArrived : notification is TACNotification
 
 ### 在控制台上推送消息
 
-打开 [MobileLine 控制台](https://console.cloud.tencent.com/tac)，选择【创建推送】下的【应用内消息】，并填写好 **命令描述** 和 **命令内容**，然后选择单选框中的【单个设备】，并将注册成功后回调时打印的设备唯一标识 token 信息拷贝到编辑框中（获取 token 信息请参见 [这里](https://cloud.tencent.com/document/product/666/16635)），您也可以在推送时添加自定义参数，然后点击【确认推送】。
+打开 [MobileLine 控制台](https://console.cloud.tencent.com/tac)，选择【创建推送】下的【应用内消息】，并填写好 **命令描述** 和 **命令内容**，然后选择单选框中的【单个设备】，并将注册成功后回调时打印的设备唯一标识 token 信息拷贝到编辑框中（获取 token 信息请参见 [这里](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E9%80%9A%E7%9F%A5%E6%8E%A8%E9%80%81%20Messaging%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/Android%20%E6%96%87%E6%A1%A3/%E8%8E%B7%E5%8F%96%E8%AE%BE%E5%A4%87%E6%8E%A8%E9%80%81%20token.md)），您也可以在推送时添加自定义参数，然后点击【确认推送】。
 
 ![](https://tacimg-1253960454.cos.ap-guangzhou.myqcloud.com/guides/Messaging/console_push_message.png)
 
