--- a/开始使用/通知推送 Messaging 集成指南/iOS 文档/根据账户推送消息.md
+++ b/开始使用/通知推送 Messaging 集成指南/iOS 文档/根据账户推送消息.md
@@ -1,6 +1,6 @@
 ## 绑定账户
 
-您可以在 [iOS 编程手册](https://cloud.tencent.com/document/product/666/14307) 中绑定账户。
+您可以在 [iOS 编程手册](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E6%A0%B8%E5%BF%83%E6%A8%A1%E5%9D%97%20Core%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/iOS%20%E6%96%87%E6%A1%A3/iOS%20%E7%BC%96%E7%A8%8B%E6%89%8B%E5%86%8C.md) 中绑定账户。
 
 > 帐号可以是邮箱、QQ号、手机号、用户名等任意类别的业务帐号
 
