--- a/开始使用/通知推送 Messaging 集成指南/Android 文档/根据标签推送消息.md
+++ b/开始使用/通知推送 Messaging 集成指南/Android 文档/根据标签推送消息.md
@@ -80,7 +80,7 @@ I/messaging: MyReceiver::onBindTagResult : code is 0 tag programer
 
 ### 根据标签发送通知
 
-控制台上暂时不支持通过自定义标签来发送通知，您可以通过调用我们的后台接口来进行发送，详情请参见 [标签推送 API 接口](https://cloud.tencent.com/document/product/666/15588) 或者 [SDK 接口](https://cloud.tencent.com/document/product/666/15606)。
+控制台上暂时不支持通过自定义标签来发送通知，您可以通过调用我们的后台接口来进行发送，详情请参见 [标签推送 API 接口](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E9%80%9A%E7%9F%A5%E6%8E%A8%E9%80%81%20Messaging%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/%E6%9C%8D%E5%8A%A1%E7%AB%AFAPI%E6%8E%A5%E5%85%A5/Rest%20API%20%E4%BD%BF%E7%94%A8%E6%8C%87%E5%8D%97/%E6%8E%A8%E9%80%81%E7%9B%B8%E5%85%B3%E6%8E%A5%E5%8F%A3/%E6%A0%87%E7%AD%BE.md) 或者 [SDK 接口](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E9%80%9A%E7%9F%A5%E6%8E%A8%E9%80%81%20Messaging%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/%E6%9C%8D%E5%8A%A1%E7%AB%AFAPI%E6%8E%A5%E5%85%A5/%E6%9C%8D%E5%8A%A1%E7%AB%AF%E5%85%B6%E4%BB%96%E8%AF%AD%E8%A8%80.md)。
 
 ### 验证通知是否发送成功
 
