--- a/开始使用/通知推送 Messaging 集成指南/iOS 文档/通过后台接口推送消息.md
+++ b/开始使用/通知推送 Messaging 集成指南/iOS 文档/通过后台接口推送消息.md
@@ -32,4 +32,4 @@
 
 ## 后台接口说明
 
-以上【推送通知栏消息】和【推送透传消息】两部分可用仅仅作为您的调试使用，在生产环境下可以使用我们提供的 [API 接口](https://cloud.tencent.com/document/product/666/15579) 和 [SDK](https://cloud.tencent.com/document/product/666/15606) 来推送消息。
+以上【推送通知栏消息】和【推送透传消息】两部分可用仅仅作为您的调试使用，在生产环境下可以使用我们提供的 [API 接口](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E9%80%9A%E7%9F%A5%E6%8E%A8%E9%80%81%20Messaging%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/%E6%9C%8D%E5%8A%A1%E7%AB%AFAPI%E6%8E%A5%E5%85%A5/Rest%20API%20%E4%BD%BF%E7%94%A8%E6%8C%87%E5%8D%97/API%20%E7%AE%80%E4%BB%8B.md) 和 [SDK](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E9%80%9A%E7%9F%A5%E6%8E%A8%E9%80%81%20Messaging%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/%E6%9C%8D%E5%8A%A1%E7%AB%AFAPI%E6%8E%A5%E5%85%A5/%E6%9C%8D%E5%8A%A1%E7%AB%AF%E5%85%B6%E4%BB%96%E8%AF%AD%E8%A8%80.md) 来推送消息。
