--- a/开始使用/通知推送 Messaging 集成指南/开发者手册/服务接入总览.md
+++ b/开始使用/通知推送 Messaging 集成指南/开发者手册/服务接入总览.md
@@ -7,12 +7,12 @@
 对于 iOS 端的开发者而言，需要先向苹果申请推送证书才能使用。申请推送证书步骤可参见：[申请推送证书指南](https://cloud.tencent.com/document/product/666/14860)。
 ## 终端 SDK 接入
 ### Android SDK 接入
-详见 [Android SDK 使用入门](https://cloud.tencent.com/document/product/666/14323)。
+详见 [Android SDK 使用入门](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E9%80%9A%E7%9F%A5%E6%8E%A8%E9%80%81%20Messaging%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/Android%20%E6%96%87%E6%A1%A3/Android%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8.md)。
 
 ### iOS SDK 接入
-详见 [iOS SDK 使用入门](https://cloud.tencent.com/document/product/666/14350)。
+详见 [iOS SDK 使用入门](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E9%80%9A%E7%9F%A5%E6%8E%A8%E9%80%81%20Messaging%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/iOS%20%E6%96%87%E6%A1%A3/iOS%20%E4%BD%BF%E7%94%A8%E5%85%A5%E9%97%A8.md)。
 
 ## 服务器端推送
-可以采取服务器调用 API 的方式进行推送，详细的接口描述可以参见 [服务器端推送指南](https://cloud.tencent.com/document/product/666/14772)。
+可以采取服务器调用 API 的方式进行推送，详细的接口描述可以参见 [服务器端推送指南](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E9%80%9A%E7%9F%A5%E6%8E%A8%E9%80%81%20Messaging%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/%E6%9C%8D%E5%8A%A1%E7%AB%AFAPI%E6%8E%A5%E5%85%A5/Rest%20API%20%E4%BD%BF%E7%94%A8%E6%8C%87%E5%8D%97/API%20%E7%AE%80%E4%BB%8B.md)。
 ## 控制台推送
-如果没有使用服务器端调用 API 进行推送的需求，直接使用 [控制台推送](https://cloud.tencent.com/document/product/666/14864) 是便捷的选择。
+如果没有使用服务器端调用 API 进行推送的需求，直接使用 [控制台推送](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E9%80%9A%E7%9F%A5%E6%8E%A8%E9%80%81%20Messaging%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/%E6%8E%A7%E5%88%B6%E5%8F%B0%E6%96%87%E6%A1%A3/%E9%80%9A%E7%9F%A5%E6%8E%A8%E9%80%81%E6%8E%A7%E5%88%B6%E5%8F%B0%E6%96%87%E6%A1%A3.md) 是便捷的选择。
