fix useless links

--- a/开始使用/分析 Analytics 集成指南/Android 文档/会话统计.md
+++ b/开始使用/分析 Analytics 集成指南/Android 文档/会话统计.md
@@ -24,4 +24,4 @@ TACAnalyticsService.getInstance().exchangeNewSession(Context context)
 
 ## 设置会话过期时间
 
-应用退到后台或锁屏，默认30秒后会话过期，您可以根据业务需要修改这个配置，详细请参考 [定制 Analytics 服务](https://github.com/tencentyun/tac-documents/blob/master/%E4%BD%BF%E7%94%A8%E6%96%87%E6%A1%A3/%E5%88%86%E6%9E%90%20Analytics%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/Android%20%E6%96%87%E6%A1%A3/%E5%AE%9A%E5%88%B6%E6%9C%8D%E5%8A%A1.md)。
+应用退到后台或锁屏，默认30秒后会话过期，您可以根据业务需要修改这个配置，详细请参考 [定制 Analytics 服务](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E5%88%86%E6%9E%90%20Analytics%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/Android%20%E6%96%87%E6%A1%A3/%E5%AE%9A%E5%88%B6%E6%9C%8D%E5%8A%A1.md)。
