--- a/开始使用/支付 Payment 集成指南/Payment控制台文档/使用说明.md
+++ b/开始使用/支付 Payment 集成指南/Payment控制台文档/使用说明.md
@@ -26,7 +26,7 @@
 
 ##### 商户号
 
-商户号需要在根据您开通的支付渠道在 [微信商户平台](https://pay.weixin.qq.com/index.php/core/home/login) 或者 [QQ 钱包商户平台](https://qpay.qq.com) 上申请，申请的方式请参见 [这里](https://github.com/tencentyun/tac-documents/blob/master/%E4%BD%BF%E7%94%A8%E6%96%87%E6%A1%A3/%E6%94%AF%E4%BB%98%20Payment%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/%E6%94%AF%E4%BB%98%E6%B8%A0%E9%81%93%E7%94%B3%E8%AF%B7%E6%8C%87%E5%BC%95.md) 。
+商户号需要在根据您开通的支付渠道在 [微信商户平台](https://pay.weixin.qq.com/index.php/core/home/login) 或者 [QQ 钱包商户平台](https://qpay.qq.com) 上申请，申请的方式请参见 [这里](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E6%94%AF%E4%BB%98%20Payment%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/%E6%94%AF%E4%BB%98%E6%B8%A0%E9%81%93%E7%94%B3%E8%AF%B7%E6%8C%87%E5%BC%95.md) 。
 
 ##### 商户号密钥
 
@@ -34,7 +34,7 @@
 
 ##### AppID
 
-在开通支付前，您需要根据开通的渠道在 [微信开放平台](https://open.weixin.qq.com) 或者 [腾讯开放平台](http://open.qq.com/) 上注册，并创建一个应用，创建好应用后请将其 AppId 拷贝过来，同样可以参见 [这里](https://github.com/tencentyun/tac-documents/blob/master/%E4%BD%BF%E7%94%A8%E6%96%87%E6%A1%A3/%E6%94%AF%E4%BB%98%20Payment%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/%E6%94%AF%E4%BB%98%E6%B8%A0%E9%81%93%E7%94%B3%E8%AF%B7%E6%8C%87%E5%BC%95.md)。
+在开通支付前，您需要根据开通的渠道在 [微信开放平台](https://open.weixin.qq.com) 或者 [腾讯开放平台](http://open.qq.com/) 上注册，并创建一个应用，创建好应用后请将其 AppId 拷贝过来，同样可以参见 [这里](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E6%94%AF%E4%BB%98%20Payment%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/%E6%94%AF%E4%BB%98%E6%B8%A0%E9%81%93%E7%94%B3%E8%AF%B7%E6%8C%87%E5%BC%95.md)。
 
 **AppKey**
 
@@ -110,7 +110,7 @@
 
 ![](http://tacimg-1253960454.cosgz.myqcloud.com/guides/payment/console_payment_7.png)
 
-#### 相关信息说明 
+#### 相关信息说明
 
 |名称|意义|
 |:--:|:--|
@@ -118,8 +118,3 @@
 |支付笔数|所有用户支付的笔数|
 |支付UV|支付的用户总数|
 |ARPU|平均每个用户支付的金额数|
-
-
-
-
-
