--- a/开始使用/支付 Payment 集成指南/发货服务器配置.md
+++ b/开始使用/支付 Payment 集成指南/发货服务器配置.md
@@ -27,7 +27,7 @@ pay_channel_orderid	| string[255]	 | 支付渠道侧订单号
 metadata|	string[255]	| 透传字段，支付成功回调透传给应用，用于业务透传自定义内容。
 sub_out_trade_no_list	| array	| 调用下单接口传进来的 sub_out_trade_no_list
 ts	| string[10]|	UNIX 时间戳（格林威治时间）,精确到秒。
-sign|	string[32]	| [请求签名](https://github.com/tencentyun/tac-documents/blob/master/%E4%BD%BF%E7%94%A8%E6%96%87%E6%A1%A3/%E6%94%AF%E4%BB%98%20Payment%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/%E7%AD%BE%E5%90%8D%E8%AE%A1%E7%AE%97.md)。
+sign|	string[32]	| [请求签名](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E6%94%AF%E4%BB%98%20Payment%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/%E7%AD%BE%E5%90%8D%E8%AE%A1%E7%AE%97.md)。
 
 **返回 JSON 结果**：
 
@@ -35,4 +35,3 @@ sign|	string[32]	| [请求签名](https://github.com/tencentyun/tac-documents/bl
 ---- | ---- | ---
 ret	| int	| 结果码 0 ：成功；-1 ：失败
 msg	 | string[255] |	成功固定为小写的“ok”，失败则说明错误原因，不能返回空（使用 utf-8 编码）。
-
