--- a/开始使用/通知推送 Messaging 集成指南/Android 文档/注册状态回调通知.md
+++ b/开始使用/通知推送 Messaging 集成指南/Android 文档/注册状态回调通知.md
@@ -56,7 +56,7 @@ public class MyReceiver extends TACMessagingReceiver {
         Log.i("messaging", "MyReceiver::onNotificationDeleted : notification is " + tacNotification + " pushChannel " + pushChannel);
 
     }
-    
+
     // 绑定标签回调
     @Override
     public void onBindTagResult(Context context, int code, String tag) {
@@ -75,7 +75,7 @@ public class MyReceiver extends TACMessagingReceiver {
 
 ```
 > 注意：
-> 回调的详细说明请参考[这里](https://cloud.tencent.com/document/product/666/15361)
+> 回调的详细说明请参考[这里](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E9%80%9A%E7%9F%A5%E6%8E%A8%E9%80%81%20Messaging%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/Android%20%E6%96%87%E6%A1%A3/%E6%B3%A8%E5%86%8C%E5%9B%9E%E8%B0%83%E4%BF%A1%E6%81%AF%E8%AF%A6%E7%BB%86%E8%AF%B4%E6%98%8E.md)
 
 ## 在 `AndroidManifest.xml` 文件中注册
 
@@ -93,7 +93,7 @@ public class MyReceiver extends TACMessagingReceiver {
           <action android:name="com.tencent.tac.messaging.action.CALLBACK" />
       </intent-filter>
     </receiver>
-    
+
   </application>
 </manifest>
 
