--- a/开始使用/通知推送 Messaging 集成指南/开发者手册/服务接入总览.md
+++ b/开始使用/通知推送 Messaging 集成指南/开发者手册/服务接入总览.md
@@ -4,7 +4,7 @@
 ![整体流程](http://tacimg-1253960454.cosgz.myqcloud.com/guides/Messaging/Messaging%E6%B5%81%E7%A8%8B%E5%9B%BE.png)
 ## 申请必要资料
 ### iOS 申请必要资料
-对于 iOS 端的开发者而言，需要先向苹果申请推送证书才能使用。申请推送证书步骤可参见：[申请推送证书指南](https://cloud.tencent.com/document/product/666/14860)。
+对于 iOS 端的开发者而言，需要先向苹果申请推送证书才能使用。申请推送证书步骤可参见：[申请推送证书指南](https://xg.qq.com/docs/ios_access/ios_push_certificate.html)。
 ## 终端 SDK 接入
 ### Android SDK 接入
 详见 [Android SDK 使用入门](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E9%80%9A%E7%9F%A5%E6%8E%A8%E9%80%81%20Messaging%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/Android%20%E6%96%87%E6%A1%A3/Android%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8.md)。
