--- a/开始使用/通知推送 Messaging 集成指南/服务端API接入/Rest API 使用指南/查询相关接口/查询标签下设备数.md
+++ b/开始使用/通知推送 Messaging 集成指南/服务端API接入/Rest API 使用指南/查询相关接口/查询标签下设备数.md
@@ -2,7 +2,7 @@
 URL 路径：`http://接口域名/v2/tags/ query_tag_token_num?params`
 
 ### 请求参数
-除了 [通用参数](https://github.com/tencentyun/tac-documents/blob/master/%E4%BD%BF%E7%94%A8%E6%96%87%E6%A1%A3/%E9%80%9A%E7%9F%A5%E6%8E%A8%E9%80%81%20Messaging%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/%E6%9C%8D%E5%8A%A1%E7%AB%AFAPI%E6%8E%A5%E5%85%A5/Rest%20API%20%E4%BD%BF%E7%94%A8%E6%8C%87%E5%8D%97/%E9%80%9A%E7%94%A8%E5%8F%82%E6%95%B0.md) 外，还包括如下参数：
+除了 [通用参数](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E9%80%9A%E7%9F%A5%E6%8E%A8%E9%80%81%20Messaging%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/%E6%9C%8D%E5%8A%A1%E7%AB%AFAPI%E6%8E%A5%E5%85%A5/Rest%20API%20%E4%BD%BF%E7%94%A8%E6%8C%87%E5%8D%97/%E9%80%9A%E7%94%A8%E5%8F%82%E6%95%B0.md) 外，还包括如下参数：
 
 |参数名|	类型|	必需|	默认值|	描述|
 |-|-|-|-|-|
@@ -17,7 +17,7 @@ URL 路径：`http://接口域名/v2/tags/ query_tag_token_num?params`
 ```
 ### 示例
 MD5 加密前 url 用作生成 sign，Rest Api Url 为最终请求的 url（以下为 Android 推送示例，需替换通用参数后使用）。
-	
+
 #### MD5 加密前：
 ```
 GETopenapi.xg.qcloud.com/v2/tags/query_tag_token_numaccess_id=2100240957tag=easonmipushtesttimestamp=1502699920f255184d160bad51b88c31627bbd9530
