--- a/开始使用/分享 Share 集成指南/Android 文档/监听分享结果.md
+++ b/开始使用/分享 Share 集成指南/Android 文档/监听分享结果.md
@@ -37,7 +37,7 @@ String errorMessage = shareResult.getErrMessage();
 
 ## 获取 QQ 和 QQ 空间分享结果
 
-您可以重载分享页所在 `Activity` 的 `onActivityResult` 方法，通过： 
+您可以重载分享页所在 `Activity` 的 `onActivityResult` 方法，通过：
 
 ```
 TACShareDialog shareDialog = ...;
@@ -50,12 +50,12 @@ ShareResult shareResult = shareDialog.getQQShareResult(requestCode, resultCode, 
 ```
 public class ShareActivity extends AppCompatActivity {
 	...
-	
+
     @Override
     protected void onActivityResult(int requestCode, int resultCode, Intent data) {
         ShareResult shareResult = shareDialog.getQQShareResult(requestCode, resultCode, data);
         if (shareResult != null) {
-            Toast.makeText(this, "qq share result : " + shareResult.getResult(), 
+            Toast.makeText(this, "qq share result : " + shareResult.getResult(),
             		Toast.LENGTH_LONG).show();
         }
     }
@@ -65,7 +65,7 @@ public class ShareActivity extends AppCompatActivity {
 
 ## 获取微信分享结果
 
-首先您需要按照 [配置第三方渠道](https://github.com/tencentyun/tac-documents/blob/master/%E4%BD%BF%E7%94%A8%E6%96%87%E6%A1%A3/%E6%8E%88%E6%9D%83%20Authorization%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/Android%20%E6%96%87%E6%A1%A3/%E9%85%8D%E7%BD%AE%E7%AC%AC%E4%B8%89%E6%96%B9%E6%B8%A0%E9%81%93.md) 的指引，添加微信 SDK 的回调 Activity。
+首先您需要按照 [配置第三方渠道](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E6%8E%88%E6%9D%83%20Authorization%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/Android%20%E6%96%87%E6%A1%A3/%E9%85%8D%E7%BD%AE%E7%AC%AC%E4%B8%89%E6%96%B9%E6%B8%A0%E9%81%93.md) 的指引，添加微信 SDK 的回调 Activity。
 
 然后，在您接受回调的 `WXEntryActivity` 中重载 `onWeChatShareResult` 方法，可以获取微信分享结果的回调。请参考下面的例子：
 
@@ -83,7 +83,7 @@ public class WXEntryActivity extends WeChatBaseHandlerActivity {
     protected void onWeChatShareResult(ShareResult shareResult) {
         super.onWeChatShareResult(shareResult);
 
-        Toast.makeText(this, "wechat share result : " + shareResult.getResult(), 
+        Toast.makeText(this, "wechat share result : " + shareResult.getResult(),
         		Toast.LENGTH_LONG).show();
     }
 }
