--- a/开始使用/支付 Payment 集成指南/功能介绍.md
+++ b/开始使用/支付 Payment 集成指南/功能介绍.md
@@ -48,19 +48,19 @@ Payment 是 MobileLine 的移动计费服务，给用户提供微信支付与手
 
 ### 2. 配置应用 Server
 
-应用 Server 指的是您自己业务的服务端，使用 Payment 服务时，您必须首先 [部署发货服务器](https://github.com/tencentyun/tac-documents/blob/master/%E4%BD%BF%E7%94%A8%E6%96%87%E6%A1%A3/%E6%94%AF%E4%BB%98%20Payment%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/%E5%8F%91%E8%B4%A7%E6%9C%8D%E5%8A%A1%E5%99%A8%E9%85%8D%E7%BD%AE.md)，然后根据您自己的业务情况配置 [服务端 API](https://github.com/tencentyun/tac-documents/blob/master/%E4%BD%BF%E7%94%A8%E6%96%87%E6%A1%A3/%E6%94%AF%E4%BB%98%20Payment%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/%E6%9C%8D%E5%8A%A1%E5%99%A8%E7%AB%AF%20API.md)。
+应用 Server 指的是您自己业务的服务端，使用 Payment 服务时，您必须首先 [部署发货服务器](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E6%94%AF%E4%BB%98%20Payment%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/%E5%8F%91%E8%B4%A7%E6%9C%8D%E5%8A%A1%E5%99%A8%E9%85%8D%E7%BD%AE.md)，然后根据您自己的业务情况配置 [服务端 API](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E6%94%AF%E4%BB%98%20Payment%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/%E6%9C%8D%E5%8A%A1%E5%99%A8%E7%AB%AF%20API.md)。
 
 ### 3. 配置支付渠道
 
-支付渠道包括微信支付和 QQ 支付两个渠道，您需要自己在微信开放平台或者腾讯开放平台上申请渠道信息，然后在控制台上进行配置，支付渠道配置请参见 [Payment 支付渠道配置指引](https://github.com/tencentyun/tac-documents/blob/master/%E4%BD%BF%E7%94%A8%E6%96%87%E6%A1%A3/%E6%94%AF%E4%BB%98%20Payment%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/%E6%94%AF%E4%BB%98%E6%B8%A0%E9%81%93%E7%94%B3%E8%AF%B7%E6%8C%87%E5%BC%95.md)。
+支付渠道包括微信支付和 QQ 支付两个渠道，您需要自己在微信开放平台或者腾讯开放平台上申请渠道信息，然后在控制台上进行配置，支付渠道配置请参见 [Payment 支付渠道配置指引](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E6%94%AF%E4%BB%98%20Payment%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/%E6%94%AF%E4%BB%98%E6%B8%A0%E9%81%93%E7%94%B3%E8%AF%B7%E6%8C%87%E5%BC%95.md)。
 
 ### 4. 接入 Payment SDK
 
-配置好支付渠道后，您需要将 Payment SDK 集成到应用中，具体步骤请参见 [Payment Android 集成指南](https://github.com/tencentyun/tac-documents/blob/master/%E4%BD%BF%E7%94%A8%E6%96%87%E6%A1%A3/%E6%94%AF%E4%BB%98%20Payment%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/Android/Android%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8.md) 和 [Payment IOS 集成指南](https://github.com/tencentyun/tac-documents/blob/master/%E4%BD%BF%E7%94%A8%E6%96%87%E6%A1%A3/%E6%94%AF%E4%BB%98%20Payment%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/iOS/iOS%20%E4%BD%BF%E7%94%A8%E5%85%A5%E9%97%A8.md)。
+配置好支付渠道后，您需要将 Payment SDK 集成到应用中，具体步骤请参见 [Payment Android 集成指南](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E6%94%AF%E4%BB%98%20Payment%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/Android/Android%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8.md) 和 [Payment IOS 集成指南](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E6%94%AF%E4%BB%98%20Payment%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/iOS/iOS%20%E4%BD%BF%E7%94%A8%E5%85%A5%E9%97%A8.md)。
 
 ### 5. 使用 Payment SDK 发起支付
 
-至此，您已经完成了整个 Payment 服务的配置，现在您可以使用 Payment SDK 来发起支付了，详情请参见 [Payment Android 编程手册](https://github.com/tencentyun/tac-documents/blob/master/%E4%BD%BF%E7%94%A8%E6%96%87%E6%A1%A3/%E6%94%AF%E4%BB%98%20Payment%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/Android/Android%20%E7%BC%96%E7%A8%8B%E6%89%8B%E5%86%8C.md) 和 [Payment IOS 编程手册](https://github.com/tencentyun/tac-documents/blob/master/%E4%BD%BF%E7%94%A8%E6%96%87%E6%A1%A3/%E6%94%AF%E4%BB%98%20Payment%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/iOS/iOS%20%E7%BC%96%E7%A8%8B%E6%89%8B%E5%86%8C.md)。
+至此，您已经完成了整个 Payment 服务的配置，现在您可以使用 Payment SDK 来发起支付了，详情请参见 [Payment Android 编程手册](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E6%94%AF%E4%BB%98%20Payment%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/Android/Android%20%E7%BC%96%E7%A8%8B%E6%89%8B%E5%86%8C.md) 和 [Payment IOS 编程手册](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E6%94%AF%E4%BB%98%20Payment%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/iOS/iOS%20%E7%BC%96%E7%A8%8B%E6%89%8B%E5%86%8C.md)。
 
 ### 6. 沙箱联调和发布上线
 
@@ -72,7 +72,4 @@ Payment 的默认环境，主要用于调试，在这个环境下，支付成功
 
 #### 线上环境
 
-当您的应用调试成功后，请您将应用发布上线，上线后，Payment Server 会在您支付成功后回调控制台上设置的主回调地址或者备回调地址，如何发布上线请参考 Payment 控制台使用手册的 [配置参数](https://github.com/tencentyun/tac-documents/blob/master/%E4%BD%BF%E7%94%A8%E6%96%87%E6%A1%A3/%E6%94%AF%E4%BB%98%20Payment%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/Payment%E6%8E%A7%E5%88%B6%E5%8F%B0%E6%96%87%E6%A1%A3/%E4%BD%BF%E7%94%A8%E8%AF%B4%E6%98%8E.md) 部分。
-
-
-
+当您的应用调试成功后，请您将应用发布上线，上线后，Payment Server 会在您支付成功后回调控制台上设置的主回调地址或者备回调地址，如何发布上线请参考 Payment 控制台使用手册的 [配置参数](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E6%94%AF%E4%BB%98%20Payment%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/Payment%E6%8E%A7%E5%88%B6%E5%8F%B0%E6%96%87%E6%A1%A3/%E4%BD%BF%E7%94%A8%E8%AF%B4%E6%98%8E.md) 部分。
