--- a/开始使用/核心模块 Core 集成指南/iOS 文档/服务配置修改指南.md
+++ b/开始使用/核心模块 Core 集成指南/iOS 文档/服务配置修改指南.md
@@ -1,4 +1,4 @@
-您可以通过控制台修改配置文件来定制服务，无需添加任何代码。请注意修改之后需要重新下载配置文件，集成到工程中。请参考下面列出了各个服务的配置项和含义。您可以通过 [iOS 统一配置服务介绍](https://github.com/tencentyun/tac-documents/blob/master/%E4%BD%BF%E7%94%A8%E6%96%87%E6%A1%A3/%E6%A0%B8%E5%BF%83%E6%A8%A1%E5%9D%97%20Core%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/iOS%20%E6%96%87%E6%A1%A3/iOS%20%E7%BB%9F%E4%B8%80%E9%85%8D%E7%BD%AE%E6%9C%8D%E5%8A%A1%E4%BB%8B%E7%BB%8D.md)，获取关于统一配置服务的使用说明。
+您可以通过控制台修改配置文件来定制服务，无需添加任何代码。请注意修改之后需要重新下载配置文件，集成到工程中。请参考下面列出了各个服务的配置项和含义。您可以通过 [iOS 统一配置服务介绍](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E6%A0%B8%E5%BF%83%E6%A8%A1%E5%9D%97%20Core%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/iOS%20%E6%96%87%E6%A1%A3/iOS%20%E7%BB%9F%E4%B8%80%E9%85%8D%E7%BD%AE%E6%9C%8D%E5%8A%A1%E4%BB%8B%E7%BB%8D.md)，获取关于统一配置服务的使用说明。
 
 如果您希望通过配置文件来改变移动研发平台相关服务的行为。您可以创建一个 plist 文件，名为：`tac_services_configurations_custom.plist` 。根据下属每个服务的配置内容来控制相关行为。
 
@@ -55,7 +55,7 @@
 
 
 | 配置项	|  配置说明 |  
-| :----: | :---- | 
+| :----: | :---- |
 | appId	| 当前崩溃检测服务对应的 APPID。 |
 | excludeModuleFilters	| 崩溃数据过滤器，如果崩溃堆栈的模块名包含过滤器中设置的关键字，则崩溃数据不会进行上报。 |
 | enable	| 该服务是否启动。|
@@ -76,7 +76,7 @@
 > 服务关键字：payment
 
 
-| 配置项	|  配置说明 |  备注 | 
+| 配置项	|  配置说明 |  备注 |
 | :----: | :---- | :---- |
 | offerId	| 腾讯计费服务的 appId | 不可修改。|
 
@@ -86,7 +86,7 @@
 > 服务关键字：storage
 
 
-| 配置项	|  配置说明 |  备注 | 
+| 配置项	|  配置说明 |  备注 |
 | :----: | :---- | :---- |
 | bucket	| 存储桶名称 | 不可修改。|
 | region	| 存储桶所在的地域 | 不可修改。|
@@ -97,7 +97,7 @@
 > 服务关键字：social 服务下面 qq
 
 
-| 配置项	|  配置说明 | 
+| 配置项	|  配置说明 |
 | :----: | :---- | :---- |
 | appId	| QQ 互联中程序的唯一标志。 |
 | permissions	| QQ 互联进行授权的时候。 |
@@ -108,6 +108,6 @@
 > 服务关键字：social 服务下面 wechat
 
 
-| 配置项	|  配置说明 | 
-| :----: | :---- | 
+| 配置项	|  配置说明 |
+| :----: | :---- |
 |appId|当前程序在微信开放平台中 AppID。|
