--- a/开始使用/通知推送 Messaging 集成指南/服务端API接入/Rest API 使用指南/推送相关接口/批量账号.md
+++ b/开始使用/通知推送 Messaging 集成指南/服务端API接入/Rest API 使用指南/推送相关接口/批量账号.md
@@ -1,9 +1,9 @@
 设备的账户或别名由终端 SDK 在调用推送注册接口时设置，详情参考终端 SDK 文档。
-账号数量≥10000 时建议使用 [高级批量账号](https://cloud.tencent.com/document/product/666/15589) 接口进行推送。
+账号数量≥10000 时建议使用 [高级批量账号](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E9%80%9A%E7%9F%A5%E6%8E%A8%E9%80%81%20Messaging%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/%E6%9C%8D%E5%8A%A1%E7%AB%AFAPI%E6%8E%A5%E5%85%A5/Rest%20API%20%E4%BD%BF%E7%94%A8%E6%8C%87%E5%8D%97/%E6%8E%A8%E9%80%81%E7%9B%B8%E5%85%B3%E6%8E%A5%E5%8F%A3/%E9%AB%98%E7%BA%A7%E6%89%B9%E9%87%8F%E8%B4%A6%E5%8F%B7.md) 接口进行推送。
 URL 路径：`http://接口域名/v2/push/account_list?params`
 
 ### 请求参数
-除了 [通用参数](https://github.com/tencentyun/tac-documents/blob/master/%E4%BD%BF%E7%94%A8%E6%96%87%E6%A1%A3/%E9%80%9A%E7%9F%A5%E6%8E%A8%E9%80%81%20Messaging%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/%E6%9C%8D%E5%8A%A1%E7%AB%AFAPI%E6%8E%A5%E5%85%A5/Rest%20API%20%E4%BD%BF%E7%94%A8%E6%8C%87%E5%8D%97/%E9%80%9A%E7%94%A8%E5%8F%82%E6%95%B0.md)外，还包括如下参数：
+除了 [通用参数](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E9%80%9A%E7%9F%A5%E6%8E%A8%E9%80%81%20Messaging%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/%E6%9C%8D%E5%8A%A1%E7%AB%AFAPI%E6%8E%A5%E5%85%A5/Rest%20API%20%E4%BD%BF%E7%94%A8%E6%8C%87%E5%8D%97/%E9%80%9A%E7%94%A8%E5%8F%82%E6%95%B0.md)外，还包括如下参数：
 
 |参数名|	类型	|必需|	默认值	|描述|
 |-|-|-|-|-|
