--- a/开始使用/通知推送 Messaging 集成指南/服务端API接入/Rest API 使用指南/推送相关接口/高级批量账号.md
+++ b/开始使用/通知推送 Messaging 集成指南/服务端API接入/Rest API 使用指南/推送相关接口/高级批量账号.md
@@ -6,14 +6,14 @@
 URL 路径：`http://接口域名/v2/push/create_multipush?params`
 
 ### 请求参数
-除了 [通用参数](https://github.com/tencentyun/tac-documents/blob/master/%E4%BD%BF%E7%94%A8%E6%96%87%E6%A1%A3/%E9%80%9A%E7%9F%A5%E6%8E%A8%E9%80%81%20Messaging%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/%E6%9C%8D%E5%8A%A1%E7%AB%AFAPI%E6%8E%A5%E5%85%A5/Rest%20API%20%E4%BD%BF%E7%94%A8%E6%8C%87%E5%8D%97/%E9%80%9A%E7%94%A8%E5%8F%82%E6%95%B0.md) 外，还包括如下参数：
+除了 [通用参数](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E9%80%9A%E7%9F%A5%E6%8E%A8%E9%80%81%20Messaging%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/%E6%9C%8D%E5%8A%A1%E7%AB%AFAPI%E6%8E%A5%E5%85%A5/Rest%20API%20%E4%BD%BF%E7%94%A8%E6%8C%87%E5%8D%97/%E9%80%9A%E7%94%A8%E5%8F%82%E6%95%B0.md) 外，还包括如下参数：
 
 |参数名|	类型	|必需|	默认值|	描述|
 |-|-|-|-|-|
 |message_type|	uint|	是	|无|	消息类型：1. 通知 2. 透传消息|
 |message	|string|	是|	无	|详细参阅 [推送 Android 平台](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E9%80%9A%E7%9F%A5%E6%8E%A8%E9%80%81%20Messaging%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/%E6%9C%8D%E5%8A%A1%E7%AB%AFAPI%E6%8E%A5%E5%85%A5/Rest%20API%20%E4%BD%BF%E7%94%A8%E6%8C%87%E5%8D%97/%E6%B6%88%E6%81%AF%E6%A0%BC%E5%BC%8F/%E6%8E%A8%E9%80%81%20Android%20%E5%B9%B3%E5%8F%B0.md)、[推送 iOS 平台](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E9%80%9A%E7%9F%A5%E6%8E%A8%E9%80%81%20Messaging%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/%E6%9C%8D%E5%8A%A1%E7%AB%AFAPI%E6%8E%A5%E5%85%A5/Rest%20API%20%E4%BD%BF%E7%94%A8%E6%8C%87%E5%8D%97/%E6%B6%88%E6%81%AF%E6%A0%BC%E5%BC%8F/%E6%8E%A8%E9%80%81%20iOS%20%E5%B9%B3%E5%8F%B0.md)|
 |expire_time|	uint|	否|	无|	消息离线存储多久，单位为秒，最长存储时间 3 天。在超时时间内，可以发起此消息的批量推送|
-|multi_pkg|	uint	|否|	无|	0 表示按注册时提供的包名分发消息；1 表示按 access id 分发消息，所有以该 access id 成功注册推送的 App 均可收到消息| 
+|multi_pkg|	uint	|否|	无|	0 表示按注册时提供的包名分发消息；1 表示按 access id 分发消息，所有以该 access id 成功注册推送的 App 均可收到消息|
 |environment|	uint|	仅 iOS 必需|	无|	向 iOS 设备推送时必填，1 表示推送生产环境；2 表示推送开发环境。推送 Android 平台不填或填 0|
 
 ## 选择推送批量帐号
@@ -21,7 +21,7 @@ URL 路径：`http://接口域名/v2/push/create_multipush?params`
 URL 路径：`http://接口域名/v2/push/account_list_multiple?params`
 
 ### 请求参数
-除了 [通用参数](https://github.com/tencentyun/tac-documents/blob/master/%E4%BD%BF%E7%94%A8%E6%96%87%E6%A1%A3/%E9%80%9A%E7%9F%A5%E6%8E%A8%E9%80%81%20Messaging%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/%E6%9C%8D%E5%8A%A1%E7%AB%AFAPI%E6%8E%A5%E5%85%A5/Rest%20API%20%E4%BD%BF%E7%94%A8%E6%8C%87%E5%8D%97/%E9%80%9A%E7%94%A8%E5%8F%82%E6%95%B0.md) 外，还包括如下参数：
+除了 [通用参数](https://github.com/tencentyun/tac-documents/blob/master/%E5%BC%80%E5%A7%8B%E4%BD%BF%E7%94%A8/%E9%80%9A%E7%9F%A5%E6%8E%A8%E9%80%81%20Messaging%20%E9%9B%86%E6%88%90%E6%8C%87%E5%8D%97/%E6%9C%8D%E5%8A%A1%E7%AB%AFAPI%E6%8E%A5%E5%85%A5/Rest%20API%20%E4%BD%BF%E7%94%A8%E6%8C%87%E5%8D%97/%E9%80%9A%E7%94%A8%E5%8F%82%E6%95%B0.md) 外，还包括如下参数：
 
 |参数名|	类型|	必需|	默认值|	描述|
 |-|-|-|-|-|
